<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dip"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/hederStart"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:background="#fff"
        android:padding="3dp"
        android:paddingBottom="10dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/opis"
        android:src="@drawable/opona4" />

    <Button
        android:id="@+id/changeActivityOpony"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:text="@string/changeOpony" />

    <Button
        android:id="@+id/changeActivityFelgi"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:text="@string/changeFelgi" />
    
     <Button
        android:id="@+id/changeActivityOpony2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:paddingTop="5dp"
        android:text="@string/changeOpony2" />

</LinearLayout>
</ScrollView>